--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Video Comments",
   "short_name": "Video Comments",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "To assist in recording video comments",
   "background": {
     "service_worker": "service-worker.js",
@@ -18,7 +18,8 @@
     "128": "icon128.png"
   },
   "permissions": [
-    "sidePanel"
+    "sidePanel",
+    "tabs"
   ],
   "side_panel": {
     "default_path": "index.html"
